src/objects/Contract/fields/Non_Administrable_Observations__c.field-meta.xml
<CustomField>
    <fullName>Non_Administrable_Observations__c</fullName>
    <description>Multi Picklist Field to capture the Observation</description>
    <label>Non-Administrable Observations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Condition based pricing</fullName>
            </value>
            <value>
                <fullName>Contract does not have a PN list</fullName>
            </value>
            <value>
                <fullName>Contract SB price functionality</fullName>
            </value>
            <value>
                <fullName>Customer Tier conflict</fullName>
            </value>
            <value>
                <fullName>Prices based on order placement date</fullName>
            </value>
            <value>
                <fullName>Prices based on order quantities</fullName>
            </value>
            <value>
                <fullName>R&amp;O Tier pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>