src/objects/Contract/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <label>OEM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boeing</fullName>
            </value>
            <value>
                <fullName>Bombardier</fullName>
            </value>
            <value>
                <fullName>Cessna</fullName>
            </value>
            <value>
                <fullName>Dassault</fullName>
            </value>
            <value>
                <fullName>Dornier</fullName>
            </value>
            <value>
                <fullName>Gulfstream</fullName>
            </value>
            <value>
                <fullName>Raytheon</fullName>
            </value>
            <value>
                <fullName>Embraer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>