src/objects/Contract/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>