src/objects/Contract/fields/Reason_for_extension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_extension__c</fullName>
    <label>Reason For Extension</label>
    <type>TextArea</type>
</CustomField>