src/objects/Contract/fields/Record_Code__c.field-meta.xml
<CustomField>
    <fullName>Record_Code__c</fullName>
    <description>Record Code is Record Retention &quot;Information Classification Code&quot; applied to identified SFDC Objects and carries specified record retention schedule and triggering event criteria.</description>
    <inlineHelpText>Record Code is Record Retention &quot;Information Classification Code&quot; applied to identified SFDC Objects and carries specified record retention schedule and triggering event criteria.</inlineHelpText>
    <label>Record Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>17204 - LEG100</fullName>
                <default>true</default>
                <label>17204 - LEG100</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>