src/objects/Contract/fields/Renewal_Account_Name_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Account_Name_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BM 8/11/12 - created for MSP HAPP Project. This is the Dealer used in template fields during renewal process. After Renewal is complete it will be copied to the contract header.</description>
    <inlineHelpText>This is the Dealer used in template fields during renewal process. After Renewal is complete it will be copied to the contract header.</inlineHelpText>
    <label>Renewal Account Name Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Renewal Account Name Dealer)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>