src/objects/Contract/fields/Renewal_Address_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Address_Dealer__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. this is the Address for the dealer account record, used during the renewal process for templates.</description>
    <formula>IF(Renewal_Account_Name_Dealer__r.Report_Address_Line_1__c!=null, Renewal_Account_Name_Dealer__r.Report_Address_Line_1__c+&apos;,&apos;,&apos;&apos;) +&apos; &apos;+
IF(Renewal_Account_Name_Dealer__r.Report_Address_Line_2__c!=null, Renewal_Account_Name_Dealer__r.Report_Address_Line_2__c+&apos;,&apos;,&apos;&apos;) +&apos; &apos;+
IF(Renewal_Account_Name_Dealer__r.Report_Address_Line_3__c!=null, Renewal_Account_Name_Dealer__r.Report_Address_Line_3__c+&apos;,&apos;,&apos;&apos;) +&apos; &apos;+
IF(Renewal_Account_Name_Dealer__r.Report_City_Name__c!=null, Renewal_Account_Name_Dealer__r.Report_City_Name__c+&apos;,&apos;,&apos;&apos;) +&apos; &apos;+
IF(TEXT(Renewal_Account_Name_Dealer__r.Report_Country_Name__c )!=null, TEXT(Renewal_Account_Name_Dealer__r.Report_Country_Name__c )+&apos;,&apos;, &apos;&apos;) +&apos; &apos;+
IF(TEXT(Renewal_Account_Name_Dealer__r.Report_State_Code__c )!=null, TEXT(Renewal_Account_Name_Dealer__r.Report_State_Code__c )+&apos;,&apos;,&apos;&apos;) +&apos; &apos;+
IF(Renewal_Account_Name_Dealer__r.Report_Postal_Code__c!=null, Renewal_Account_Name_Dealer__r.Report_Postal_Code__c,&apos;&apos;)</formula>
    <inlineHelpText>This is the Address for the dealer account record, used during the renewal process for templates.</inlineHelpText>
    <label>Renewal Address Dealer</label>
    <type>Text</type>
</CustomField>