src/objects/Contract/fields/Renewal_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Aircraft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Renewal Aircraft - to be used in contract templates for renewal process</description>
    <inlineHelpText>Renewal Aircraft - to be used in contract templates for renewal process</inlineHelpText>
    <label>Renewal Aircraft</label>
    <referenceTo>Fleet_Asset_Detail__c</referenceTo>
    <relationshipLabel>Contracts (Renewal Aircraft)</relationshipLabel>
    <relationshipName>Contracts1_del</relationshipName>
    <type>Lookup</type>
</CustomField>