src/objects/Contract/fields/Renewal_Aircraft_Tail_Number__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Aircraft_Tail_Number__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the Tail Number of the Aircraft used during the Renewal Process for templates etc.</description>
    <formula>Renewal_Aircraft__r.Tail_Number__c</formula>
    <inlineHelpText>This is the Tail Number of the Aircraft used during the Renewal Process for templates etc.</inlineHelpText>
    <label>Renewal Aircraft Tail Number</label>
    <type>Text</type>
</CustomField>