src/objects/Contract/fields/Renewal_Annual_Flight_HRS__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Annual_Flight_HRS__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the expected annual flight hours data used in renewal process, in templates etc.</description>
    <inlineHelpText>This is the expected annual flight hours data used in renewal process, in templates etc.</inlineHelpText>
    <label>Renewal Annual Flight HRS</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>