src/objects/Contract/fields/Renewal_Classification__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Classification__c</fullName>
    <label>Renewal Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engines Only</fullName>
            </value>
            <value>
                <fullName>APU Only</fullName>
            </value>
            <value>
                <fullName>Engines &amp; APU</fullName>
            </value>
            <value>
                <fullName>Addendum</fullName>
            </value>
            <value>
                <fullName>Addendum &amp; Engines</fullName>
            </value>
            <value>
                <fullName>Addendum &amp; APU</fullName>
            </value>
            <value>
                <fullName>Addendum, Engines &amp;APU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>