src/objects/Contract/fields/Renewal_Customer__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the End user customer/aircraft owner data used during the Renewal Cycle for templates etc. After renewal is complete this data will be copied to the Contract Header.</description>
    <inlineHelpText>This is the End user customer/aircraft owner data used during the Renewal Cycle for templates etc. After renewal is complete this data will be copied to the Contract Header.</inlineHelpText>
    <label>Renewal Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Renewal Customer)</relationshipLabel>
    <relationshipName>Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>