src/objects/Contract/fields/RENEWAL_DOLLAR_AMT__c.field-meta.xml
<CustomField>
    <fullName>RENEWAL_DOLLAR_AMT__c</fullName>
    <description>BM 6/26/13 - This was added for SVCS SFDC Interfaces project. This is a redundant field which should only be used by the interfaces user and not by the services team.</description>
    <inlineHelpText>This is a redundant field which should only be used by the interfaces user and not by the services team.</inlineHelpText>
    <label>Renewal Dollar Amount Interface</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>