src/objects/Contract/fields/Renewal_EMS_Required__c.field-meta.xml
<CustomField>
    <fullName>Renewal_EMS_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BM 8/11/12 - created for MSP HAPP Project. This is the indicator as to whether EMS is required, used during the Renewal process. After renewal is complete the value is copied to the Contract Header.</description>
    <inlineHelpText>This is the indicator as to whether EMS is required, used during the Renewal process. After renewal is complete the value is copied to the Contract Header.</inlineHelpText>
    <label>Renewal - EMS Required</label>
    <type>Checkbox</type>
</CustomField>