src/objects/Contract/fields/Renewal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_End_Date__c</fullName>
    <description>BM 8/11/12 - created for MSP HAPP Project. This is the end date being negotiated during the renewal process. After renewal is complete the value will be copied to the contract header.</description>
    <inlineHelpText>This is the end date being negotiated during the renewal process. After renewal is complete the value will be copied to the contract header.</inlineHelpText>
    <label>Renewal End Date</label>
    <type>Date</type>
</CustomField>