src/objects/Contract/fields/Renewal_Fleet_Discount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Fleet_Discount__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the fleet discount data used in renewal process for templates etc.</description>
    <inlineHelpText>This is the fleet discount data used in renewal process for templates etc.</inlineHelpText>
    <label>Renewal Fleet Discount</label>
    <length>30</length>
    <type>Text</type>
</CustomField>