src/objects/Contract/fields/Renewal_Last_Year_Price_ZGRT__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Last_Year_Price_ZGRT__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the last year price data used in renewal process.</description>
    <inlineHelpText>This is the last year price data used in renewal process.</inlineHelpText>
    <label>Renewal Last Year Price (ZGRT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>