src/objects/Contract/fields/Renewal_MPP_required__c.field-meta.xml
<CustomField>
    <fullName>Renewal_MPP_required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BM - 8/11/12 - created for MSP HAPP Project. This is an indicator as to whether MPP is required. It is used during the renewal process in templates etc.</description>
    <inlineHelpText>This is an indicator as to whether MPP is required. It is used during the renewal process in templates etc.</inlineHelpText>
    <label>Renewal MPP required</label>
    <type>Checkbox</type>
</CustomField>