src/objects/Contract/fields/Renewal_Net_Total_price_for_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Net_Total_price_for_This_Year__c</fullName>
    <description>BM 8/11/12 - created for MSP HAPP Project. This is the renewal total price used in renewal process in templates etc.</description>
    <inlineHelpText>This is the renewal total price used in renewal process in templates etc.</inlineHelpText>
    <label>Renewal Net Total price for This Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>