src/objects/Contract/fields/Renewal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Notes__c</fullName>
    <description>BM 8/11/12 - Notes used during the renewal process.</description>
    <inlineHelpText>Notes used during the renewal process.</inlineHelpText>
    <label>Renewal Notes</label>
    <type>TextArea</type>
</CustomField>