src/objects/Contract/fields/Renewal_Order_Receipt_Name__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Order_Receipt_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BM 8/11/12 - created for MSP HAPP Project - this is the contact who will receive the renewal order.
Also used for NavDB, and GDC as the person to receive the agreement (new or Renewal)</description>
    <inlineHelpText>this is the contact who will receive the renewal order.
Also used for NavDB, and GDC as the person to receive the agreement (new or Renewal)</inlineHelpText>
    <label>Renewal Order Receipt Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>