src/objects/Contract/fields/Renewal_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Package_Sent__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the date that the renewal package was sent to the customer.</description>
    <inlineHelpText>This is the date that the renewal package was sent to the customer.</inlineHelpText>
    <label>Renewal Package Sent</label>
    <type>Date</type>
</CustomField>