src/objects/Contract/fields/Renewal_Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Payment_Schedule__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the schedule for payment data used in the Renewal process.</description>
    <inlineHelpText>This is the schedule for payment data used in the Renewal process.</inlineHelpText>
    <label>Renewal Payment Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid in Advance</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>