src/objects/Contract/fields/Renewal_Period_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Period_of_Coverage__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the period of coverage data used in the renewal process for templates etc.</description>
    <inlineHelpText>This is the period of coverage data used in the renewal process for templates etc.</inlineHelpText>
    <label>Renewal Period of Coverage</label>
    <length>30</length>
    <type>Text</type>
</CustomField>