src/objects/Contract/fields/Renewal_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Start_date__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the start date data used in the Renewal process. After renewal is complete, the data will be copied to the contract header.</description>
    <inlineHelpText>This is the start date data used in the Renewal process. After renewal is complete, the data will be copied to the contract header.</inlineHelpText>
    <label>Renewal Start date</label>
    <type>Date</type>
</CustomField>