src/objects/Contract/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is the status of this contract in the renewal process cycle.</description>
    <inlineHelpText>This is the status of this contract in the renewal process cycle.</inlineHelpText>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15 Day Followup</fullName>
            </value>
            <value>
                <fullName>30 Day Followup</fullName>
            </value>
            <value>
                <fullName>In HON processing</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Renewal Complete</fullName>
            </value>
            <value>
                <fullName>Renewal package Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Renewal package Sent to Dealer</fullName>
            </value>
            <value>
                <fullName>Telephone/email Follow up</fullName>
            </value>
            <value>
                <fullName>Transfer Package Sent – Customer</fullName>
            </value>
            <value>
                <fullName>Transfer Request Received – HON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>