src/objects/Contract/fields/Revision__c.field-meta.xml
<CustomField>
    <fullName>Revision__c</fullName>
    <description>Can be used to track Amendments</description>
    <inlineHelpText>Number of Revisions / Amendments to this Contract</inlineHelpText>
    <label>Revision</label>
    <length>20</length>
    <type>Text</type>
</CustomField>