src/objects/Contract/fields/ROTitle__c.field-meta.xml
<CustomField>
    <fullName>ROTitle__c</fullName>
    <label>ROTitle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>