src/objects/Contract/fields/Sbl_Platform_Row_ID__c.field-meta.xml
<CustomField>
    <fullName>Sbl_Platform_Row_ID__c</fullName>
    <label>Sbl Platform Row ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>