src/objects/Contract/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <formula>TEXT( Account.Strategic_Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SBU</label>
    <type>Text</type>
</CustomField>