src/objects/Contract/fields/Serv_Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Serv_Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>