src/objects/Contract/fields/Serv_Svc_Type_Nm__c.field-meta.xml
<CustomField>
    <fullName>Serv_Svc_Type_Nm__c</fullName>
    <description>Added for Services SFDC Interfaces project and related to the Services team usage of SFDC to manage GDC/NavDb contracts. This field corresponds to the BMS Source BMS_BO_SUBSCR_VW view, SVC_TYPE_NM column. This field in BMS is for Service Type</description>
    <inlineHelpText>This data originates in BMS and is for Service Type.</inlineHelpText>
    <label>Serv Svc Type Nm</label>
    <length>30</length>
    <type>Text</type>
</CustomField>