src/objects/Contract/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <formula>TEXT( Account.Service_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Level</label>
    <type>Text</type>
</CustomField>