src/objects/Contract/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <description>Field created for service interface project</description>
    <label>Site Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>