src/objects/Contract/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <description>BM 8/11/12 - Created for MSP HAPP Project. This is a constrained picklist tied to Status.
BM 7/22/2013 - added missing SAP Sub-Status options and updated constrained pick accordingly - for Services SFDC Interfaces project</description>
    <inlineHelpText>This is a constrained picklist tied to Status.</inlineHelpText>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Transfer Request Received – HON</fullName>
            </value>
            <value>
                <fullName>Transfer Package Sent – Customer</fullName>
            </value>
            <value>
                <fullName>Contract Returned – HON</fullName>
            </value>
            <value>
                <fullName>Contract Returned – Customer</fullName>
            </value>
            <value>
                <fullName>Input to SAP – In Process</fullName>
            </value>
            <value>
                <fullName>Input to SAP – Pending Info</fullName>
            </value>
            <value>
                <fullName>Back from Input – HON</fullName>
            </value>
            <value>
                <fullName>Renewal package Sent to Customer</fullName>
            </value>
            <value>
                <fullName>Renewal package Sent to Dealer</fullName>
            </value>
            <value>
                <fullName>Contract Returned – Awaiting PO</fullName>
            </value>
            <value>
                <fullName>On hold with Dealer</fullName>
            </value>
            <value>
                <fullName>PO Req Sent</fullName>
            </value>
            <value>
                <fullName>PO # Received</fullName>
            </value>
            <value>
                <fullName>Invoice Sent - Awaiting Payment</fullName>
            </value>
            <value>
                <fullName>Payment Received</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Prior Auth Req</fullName>
            </value>
            <value>
                <fullName>Loss</fullName>
            </value>
            <value>
                <fullName>Suspended non-payment</fullName>
            </value>
            <value>
                <fullName>Bad Request (Cancelled)</fullName>
            </value>
            <value>
                <fullName>Customer Loss</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Insufficient Data</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Reply</fullName>
            </value>
            <value>
                <fullName>In Transfer</fullName>
            </value>
            <value>
                <fullName>Sale Pending</fullName>
            </value>
            <value>
                <fullName>Termination Pending</fullName>
            </value>
            <value>
                <fullName>Renewal Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>