src/objects/Contract/fields/TOTAL_DOLLAR_AMT__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_DOLLAR_AMT__c</fullName>
    <label>Total Dollar Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>