src/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adv Payment</fullName>
            </value>
            <value>
                <fullName>APM</fullName>
            </value>
            <value>
                <fullName>APU Selection Agreement</fullName>
            </value>
            <value>
                <fullName>Asset Availability - Other</fullName>
            </value>
            <value>
                <fullName>Authorized Service Centers</fullName>
            </value>
            <value>
                <fullName>Avionics Selection Agreement</fullName>
            </value>
            <value>
                <fullName>Bailment Agreement</fullName>
            </value>
            <value>
                <fullName>BFE</fullName>
            </value>
            <value>
                <fullName>BOA</fullName>
            </value>
            <value>
                <fullName>CBL</fullName>
            </value>
            <value>
                <fullName>Cost Reimbursable</fullName>
            </value>
            <value>
                <fullName>Cost Share</fullName>
            </value>
            <value>
                <fullName>CPAL</fullName>
            </value>
            <value>
                <fullName>CPFF</fullName>
            </value>
            <value>
                <fullName>CPIF</fullName>
            </value>
            <value>
                <fullName>D&amp;S Product Sale</fullName>
            </value>
            <value>
                <fullName>D&amp;S Product Sale ACES Based</fullName>
            </value>
            <value>
                <fullName>D&amp;S Product Sale Non ACES Based</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Designee Agreement</fullName>
            </value>
            <value>
                <fullName>Development Contract</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>EMCPP</fullName>
            </value>
            <value>
                <fullName>Exchange Agreement</fullName>
            </value>
            <value>
                <fullName>FFP</fullName>
            </value>
            <value>
                <fullName>Fixed Fee Incentive</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>FMP</fullName>
            </value>
            <value>
                <fullName>FMS</fullName>
            </value>
            <value>
                <fullName>FPPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>