src/objects/Contract/fields/Usage_Cap__c.field-meta.xml
<CustomField>
    <fullName>Usage_Cap__c</fullName>
    <label>Usage Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>