src/objects/Contract/fields/UsePrice__c.field-meta.xml
<CustomField>
    <fullName>UsePrice__c</fullName>
    <formula>CASE( TBO__c , &quot;5000&quot;,   Engine_MSP_PriceNA__c  ,&quot;5400&quot;,  Engine_MSP_Price_Between__c ,  Engine_MSP_Price_ONA__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UsePrice</label>
    <type>Text</type>
</CustomField>