src/objects/Contract/recordTypes/Amendment.recordType-meta.xml
<RecordType>
    <fullName>Amendment</fullName>
    <active>true</active>
    <label>Amendment</label>
</RecordType>