src/objects/Contract/recordTypes/Contracts.recordType-meta.xml
<RecordType>
    <fullName>Contracts</fullName>
    <active>true</active>
    <label>Contracts</label>
</RecordType>