src/objects/Contract/recordTypes/GDC_Contracts.recordType-meta.xml
<RecordType>
    <fullName>GDC_Contracts</fullName>
    <active>true</active>
    <description>Used for EchoSign Agreements</description>
    <label>GDC Contracts</label>
</RecordType>