src/objects/Contract/recordTypes/HAPP_MPP_Contracts.recordType-meta.xml
<RecordType>
    <fullName>HAPP_MPP_Contracts</fullName>
    <active>true</active>
    <description>HAPP or MPP Contracts</description>
    <label>HAPP/MPP Contracts</label>
</RecordType>