src/objects/Contract/recordTypes/MSP_Contracts.recordType-meta.xml
<RecordType>
    <fullName>MSP_Contracts</fullName>
    <active>true</active>
    <description>MSP Contracts</description>
    <label>MSP Contracts</label>
</RecordType>