src/objects/Contract/recordTypes/NavDB_Contracts.recordType-meta.xml
<RecordType>
    <fullName>NavDB_Contracts</fullName>
    <active>true</active>
    <description>Used for EchoSign Agreements</description>
    <label>NavDB Contracts</label>
</RecordType>