src/objects/Contract/recordTypes/Read_Only_HAPP_MPP_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_HAPP_MPP_Contracts</fullName>
    <active>true</active>
    <description>Read-Only HAPP or MPP Contracts</description>
    <label>Read-Only HAPP/MPP Contracts</label>
</RecordType>