src/objects/Contract/recordTypes/Read_Only_MSP_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Read_Only_MSP_Contracts</fullName>
    <active>true</active>
    <description>Read-Only MSP Contracts</description>
    <label>Read-Only MSP Contracts</label>
</RecordType>