src/objects/Contract/recordTypes/SW_Tools.recordType-meta.xml
<RecordType>
    <fullName>SW_Tools</fullName>
    <active>true</active>
    <label>SW Tools</label>
</RecordType>