src/objects/Contract/recordTypes/TechPubs_Contract.recordType-meta.xml
<RecordType>
    <fullName>TechPubs_Contract</fullName>
    <active>true</active>
    <description>Contract for TechPubs</description>
    <label>TechPubs Contract</label>
</RecordType>