src/objects/Contract/recordTypes/Training_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Training_Contracts</fullName>
    <active>true</active>
    <label>Training Contracts</label>
</RecordType>