src/objects/Contract/validationRules/Amendment_validation_for_Leap.validationRule-meta.xml
<ValidationRule>
    <fullName>Amendment_validation_for_Leap</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),RecordType.Name =&apos;Amendment&apos;,Parent_Contract__c != null,Parent_Contract__r.Leap_Contract_ID__c=null)</errorConditionFormula>
    <errorMessage>Parent contract is not available in Leap to create an amendment.</errorMessage>
</ValidationRule>