src/objects/Contract/validationRules/Amendment_validation_for_Leap_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Amendment_validation_for_Leap_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISNEW(),Parent_Contract__r.Leap_Contract_ID__c !=null,NOT(ISPICKVAL( Parent_Contract__r.Status , &apos;Active&apos;)), Parent_Contract__r.Parent_Contract__c ==null)</errorConditionFormula>
    <errorMessage>The status should be active to create a contract Amendment.</errorMessage>
</ValidationRule>